TDD: 按照测试策略重组测试