@@ -16,14 +16,19 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class BooleanOptionParserTest {
 
-    @Test
+    @Test // happy path
+    public void should_set_boolean_option_to_true_if_flag_present() {
+        assertTrue(new BooleanOptionParser().parse(List.of("-l"), option("l")));
+    }
+
+    @Test // sad path
     public void should_not_accept_extra_argument_for_boolean_option() {
         TooManyArgumentsException e = assertThrows(TooManyArgumentsException.class,
-                () -> new BooleanOptionParser().parse(Arrays.asList("-l", "t"), option("l")));
+                () -> new BooleanOptionParser().parse(List.of("-l", "t"), option("l")));
         assertEquals("l", e.getOption());
     }
 
-    @Test
+    @Test // default value
     public void should_set_default_value_to_false_if_option_not_present() {
         assertFalse(new BooleanOptionParser().parse(List.of(), option("l")));
     }
